--- a/Frontend/www/assets/less/pizza/body.less
+++ b/Frontend/www/assets/less/pizza/body.less
@@ -1,7 +1,12 @@
 body{
     position: relative;
-    background-color: #FA8072;
-   // background-color: #FFFFF5;
+    background-color: #FFFFF5;
+}
+.container-fluid{
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+    
 }
 
 .back{
@@ -63,7 +68,8 @@ body{
     
     .my-line{
         position: absolute;
-       
+        width: 100%;
+        padding-right: 15px;
         height: 1px;
         margin-left: 115px;
         margin-right: 15px;
@@ -92,8 +98,8 @@ body{
     height: 85px;
     padding-top: 6px;
     position: fixed;
-    background-color: #ea862e;
-    opacity: 1;
+    background-color: #EA862E;
+    opacity: 2;
     top: 0px;
     left: 10px;
     z-index: 20;
@@ -123,15 +129,36 @@ body{
 
 .banner-bottom{
     position: fixed;
+    width: 100px;
+    height: 115px;
     bottom: 0px;
     left: 10px;
+    background-color: #EA862E;
+    font-weight: bold;
+    text-align: center;
+    color: #FFFFFF;
+    z-index: 20;
+    padding: 10px 12px 10px 12px;
+    
+    .points{
+        color: #D2691E;
+        font-size: 13px;
+        margin-top: -15px;
+        margin-bottom: 5px;
+    }
+
+    img{
+        position: fixed;
+        bottom: 115px;
+        left: 10px;
+        z-index: 20;
+        opacity: 1;
+    }
 }
 
 .annotation-kma{
-    position: relative; 
-    min-width: 100%;
-    max-width: 100%
     height: 150px;
+    width: 100%;
     padding: 40px;
     margin: auto;
     text-align: center;
