--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -1,10 +1,12 @@
-.pizza-card {
-    width: 100%;
-    margin: 0px;
+.row{
+    margin: 10px;
     margin-top: 100px;
-    margin-bottom: 30px;
+    margin-right: 30px;
+}
+.pizza-card {
     position: relative;
-    
+    width: 100%;
+    margin: 10px 10px 10px 10px;
     
     img {
         max-width: 250px;
