--- a/Frontend/www/assets/less/pizza/container.less
+++ b/Frontend/www/assets/less/pizza/container.less
@@ -6,10 +6,12 @@ body{
     width: 100%;
     padding-right: 0px;
     padding-left: 0px;
+    padding-right: 300px;
     
 }
 
 .back{
+    padding-right: 300px;
     padding: 5px;
     width: 100%;
     height: 78px;
