--- a/Frontend/www/assets/less/pizza/container.less
+++ b/Frontend/www/assets/less/pizza/container.less
@@ -2,20 +2,19 @@ body{
     position: relative;
     background-color: #FFFFF5;
 }
+
 .container-fluid{
     width: 100%;
     padding-right: 0px;
     padding-left: 0px;
     padding-right: 300px;
-    
 }
 
 .back{
-    padding-right: 300px;
-    padding: 5px;
-    width: 100%;
-    height: 78px;
     position: fixed;
+    width: 100%;
+    padding: 5px;
+    height: 78px;
     background-color: #000000;
     opacity: 0.8;
     top: 0px;
@@ -38,7 +37,7 @@ body{
             font-weight: normal;
             margin: 15px;
         }
-         @media(max-width: 570px){
+         @media(max-width: 900px){
             .time{
                 display: none;
             }
@@ -51,7 +50,7 @@ body{
             margin: 15px;
 
         }
-        @media(max-width: 840px){
+        @media(max-width: 1150px){
             .label-consignment{
                 display: none;
             }
@@ -59,12 +58,16 @@ body{
         }
 
         button{
+            position: fixed;
+            top:5px;
+            right: 300px;
             float: right;
             margin: 15px;
             margin-top: 1px;
             font-size: 12px;
             font-weight: normal;
             padding: 7px 13px 7px 13px;
+            z-index: 100px;
         }
     }
     
