--- a/Frontend/www/assets/less/pizza/booking.less
+++ b/Frontend/www/assets/less/pizza/booking.less
@@ -160,7 +160,8 @@
     z-index: 30;
     
     .sum-text{
-        margin-right: 40px;
+        margin-left: 20px;
+        margin-top: 10px;
         text-align: left;
         font-size: 14px;
         font-weight: bold;
@@ -168,7 +169,7 @@
     }
     
     .count-sum{
-        margin-left: 40px;
+        margin-right: 10px;
         text-align: right;
         font-size: 17px;
         font-weight: bold;
@@ -177,6 +178,7 @@
     
     button{
         margin: 30px;
+        margin-top: 20px;
         margin-bottom: 40px;
         width: 240px;
         height: 42px;
