--- a/Frontend/www/assets/less/pizza/container.less
+++ b/Frontend/www/assets/less/pizza/container.less
@@ -4,6 +4,7 @@ body{
 }
 
 .container-fluid{
+    margin: auto;
     width: 100%;
     padding-right: 0px;
     padding-left: 0px;
@@ -26,7 +27,7 @@ body{
         .phone{
             color: lighten(#000000, 60%);
             font-size: 20px;
-            font-weight: bond;
+            font-weight: 400;
             margin-right: 7,5px;
             margin-left: 5px;
         }
@@ -74,7 +75,6 @@ body{
     .my-line{
         position: absolute;
         width: 100%;
-        padding-right: 15px;
         height: 1px;
         margin-left: 115px;
         margin-right: 15px;
@@ -179,3 +179,50 @@ body{
         color: #808080;
     }
 }
+
+.all-pizzas{
+    margin-top: 100px;
+    text-align: center;
+    
+    
+    
+    .all{
+        margin-right: 5px;
+        font-size: 30px;
+        font-weight: 500;
+        color: #000000;
+    }
+    
+    .count-all-pizza{
+        margin-left: 5px;
+        height: 10px;
+        padding: 1px 6px 1px 6px;
+        font-weight: 500;
+        border-radius: 10px;
+        background-color: #EC890E;
+        color: #FFFFFF;  
+    }
+    
+    .nav-pills{
+        justify-content: center;
+        display: inline-block;
+
+    }
+    .nav-pills a {
+        color: #EA890E; 
+    }
+    
+    .nav-pills li.active a{
+        background-color: #EA890E;
+    }
+    
+    .nav-pills .active a:hover{
+        background-color: #EA890E;
+    }
+    
+    .nav-pills a:hover {
+        color: #EA890E;
+    } 
+}
+
+
