fixed height and border

--- a/Frontend/www/assets/less/pizza/booking.less
+++ b/Frontend/www/assets/less/pizza/booking.less
@@ -1,6 +1,6 @@
 .booking{
     position: fixed;
-    width: 0px;
+    top: 0px;
     right: 0px;
     width: 300px;
     height: 100%;
@@ -61,7 +61,7 @@
             height: 90px;
             width: 90px;
             top:10px;
-            right: -45px;
+            right: -50px;
             border-radius: 50%;
             box-sizing: border-box;
         }
