--- a/Frontend/www/assets/less/pizza/pizza-card.less
+++ b/Frontend/www/assets/less/pizza/pizza-card.less
@@ -1,19 +1,13 @@
-.row{
-    margin: 10px;
-    margin-top: 20px;
-    margin-right: 30px;
-}
-
 .pizza-card {
     position: relative;
     width: 100%;
-    margin: 10px 10px 10px 10px;
+    //margin: 10px 10px 10px 10px;
     
     
     h3 {
         color: @mainColor;
         text-align: left;
-        font-size: 30px;
+        font-size: 2vw;
         font-weight: bold;
     }
     
@@ -30,19 +24,27 @@
         height: 50px;
         margin-bottom: 10px;
         margin-top: 5px;
-        overflow: hidden;
+        overflow: scroll;
     }
 }
 
 .row{
-    text-align: center;
+    margin: 0px;
+    padding: 0px;
+    
+    .size-col{
+        text-align: center;
+        padding: 2px;
+    }
     
     .size{
+        text-align: center;
         color: #000000;
         font-size: 13px;
     }
     
     .price{
+        text-align: center;
         color: #000000;
         font-size: 27px;
         font-weight: bold;
@@ -51,6 +53,7 @@
     }
     
     .ua{
+        text-align: center;
         color: #000000;
         font-size: 14px;
         font-weight: normal;
@@ -58,6 +61,7 @@
     }
     
     button{
+        text-align: center;
         color: #FFFFFF;
         font-size: 13px;
     }
@@ -90,3 +94,101 @@
         background-color: #5cb85c;
     }
 }
+/*.row{
+    text-align: center;
+//    margin: 10px;
+//    margin-top: 20px;
+//    margin-right: 30px;
+    //box-sizing: border-box;
+    
+    .banner-new{
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        color: #FFFFFF;
+        font-weight: bold;
+        font-size: 15px;
+        padding: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-radius: 8px;
+        background-color: #d9534f;
+    }
+    
+    .banner-popular{
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        color: #FFFFFF;
+        font-weight: bold;
+        font-size: 15px;
+        padding: 5px;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-radius: 8px;
+        background-color: #5cb85c;
+    }
+    
+    .size{
+        color: #000000;
+        font-size: 13px;
+    }
+    
+    .price{
+        color: #000000;
+        font-size: 27px;
+        font-weight: bold;
+        margin-top: 10px;
+        margin-bottom: -5px;
+    }
+
+    .ua{
+        color: #000000;
+        font-size: 14px;
+        font-weight: normal;
+        margin-bottom: 5px;
+    }
+
+    button{
+        color: #FFFFFF;
+        font-size: 13px;
+        margin: 5px;
+    }
+}
+
+@media(min-width:1200px){
+    .row{
+        margin-left: 70px;
+        margin-right: 100px;
+    }
+}
+
+.pizza-card {
+    position: relative;
+    width: 100%;
+    margin: 10px 10px 10px 10px;    
+    
+    h3 {
+        color: @mainColor;
+        text-align: left;
+        font-size: 2vw;
+        font-weight: bold;
+    }
+    
+    .type-pizza{
+        color: #a3a0a0;
+        text-align: left;
+        font-size: 12px;
+        font-weight: normal;    
+    }
+    p{
+        color: #000000;
+        font-size: 13px;
+        text-align: justify;
+        height: 55px;
+        margin-bottom: 10px;
+        margin-top: 5px;
+        overflow: scroll;
+    }
+}*/
+
