--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -12,40 +12,70 @@
             }
             
             .time{
+                margin: 0px;
                 display: none;
             }
             
             .label-consignment{
-            display: none;
+                margin: 0px;
+                display: none;
             }
+            
             button{
-            position: fixed;
-            top: 30px;
-            right: 300px;
-            float: right;
-            margin: 15px;
-            margin-top: 1px;
-            font-size: 12px;
-            font-weight: normal;
-            padding: 7px 13px 7px 13px;
-            z-index: 100px;
+                top: 30px;
+                right: 270px;
+            }
         }
-        }
-    }
-    .my-line{
-        position: absolute;
-        width: 100%;
-        padding-right: 15px;
-        height: 1px;
-        margin-left: 115px;
-        margin-bottom: 10px;
-        opacity: 0.8;
-        background: #FFFFFF;
-        text-align: center;
         
+        .my-line{
+            margin-top: 0px;
+        }
+        
+        .contact-2{
+            display: none;
+        }
     }
-}
+    .main-panel{
+        .row-order{
+            .edit-order{
+                .delete{
+                        margin-left: 0px;
+                    }
+            }
+            
+        }
+    }
+    
+    .bottom-panel{
+        width: 270px;
+        
+        button{
+            width: 200px;
+        }
+    }
+    
+   .annotation-kma{
+       p{
+           font-size: 11px;
+       }
+    }
+    .container-fluid{
+        padding-right: 270px;
+    }
 
-@media(min-width:1200px){
+    .pizza-card {
+        margin: 0px;
+        margin-top: 15px;
+    }
+
+    .row{
+        margin: 5px;
+        margin-top: 20px
+    }
+
+    .booking{
+        width: 270px;
+    }
+    
     
 }
